# logfsm

./: README.md  pyproject.toml
.github/workflows/: test.yml
examples/: rules.example.yaml
logfsm/: __init__.py  cli.py  config.py  fsm_builder.py  models.py  normalizer.py  rule_engine.py  rule_suggester.py
tests/: __init__.py  test_cli.py  test_config.py  test_fsm_builder.py  test_models.py  test_normalizer.py  test_rule_engine.py  test_rule_suggester.py
